apps/lidarr/06.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  namespace: lidarr
  labels:
    app: lidarr
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8686
  selector:
    app: lidarr-server
